--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -11,6 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintStart_toStartOf="@id/imageView"
+            app:layout_constraintTop_toTopOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="@id/imageView"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"
+            android:visibility="visible"/>
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -19,7 +29,6 @@
 
             android:layout_height="400dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/adik"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +44,7 @@
             app:layout_constraintStart_toStartOf="parent"
 
             android:textSize="20dp"
-            android:text="@string/brend"
+            android:text=""
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -48,7 +57,7 @@
             app:layout_constraintStart_toEndOf="@id/textViewBrend"
             app:layout_constraintTop_toTopOf="@id/textViewBrend"
 
-            android:text="@string/category"
+            android:text=""
             android:textSize="15dp" />
 
         <TextView
@@ -57,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
 
-            android:text="@string/product_name"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="20dp"
 
@@ -70,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="@string/price"
+            android:text=""
 
             android:textColor="@color/black"
             android:textSize="20dp"
@@ -225,23 +234,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="10dp"
 
-            tools:text="@tools:sample/lorem/random"
+            tools:text=""
             android:textColor="@color/black"/>
 
         <TextView
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="24dp"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
 
             android:background="@color/grey_2"
+            android:layout_marginStart="40dp"
+            android:fontFamily="@font/pt_root_bold"
 
-            android:text="NEW"
-            android:textSize="24dp"
             android:gravity="center"
-            android:fontFamily="@font/pt_root_bold" />
+            android:text="NEW"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textCategory"
+            app:layout_constraintStart_toEndOf="@+id/textCategory"
+            app:layout_constraintTop_toTopOf="@+id/textCategory" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -262,15 +271,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewDescriptionText"/>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/imageView"
-            app:layout_constraintTop_toTopOf="@id/imageView"
-            app:layout_constraintEnd_toEndOf="@id/imageView"
-            app:layout_constraintBottom_toBottomOf="@id/imageView"
-            android:visibility="gone"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
