--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -11,6 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/buttonBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+
+            android:background="@drawable/ic_back"/>
+
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="100dp"
@@ -25,13 +36,13 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
 
             android:layout_height="400dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/buttonBack" />
 
 
         <TextView
@@ -238,12 +249,14 @@
             android:textColor="@color/black"/>
 
         <TextView
+            android:id="@+id/textViewLabelNew"
             android:layout_width="80dp"
             android:layout_height="30dp"
 
             android:background="@color/grey_2"
             android:layout_marginStart="40dp"
             android:fontFamily="@font/pt_root_bold"
+            android:visibility="gone"
 
             android:gravity="center"
             android:text="NEW"
@@ -253,12 +266,13 @@
             app:layout_constraintTop_toTopOf="@+id/textCategory" />
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
 
-            app:layout_constraintTop_toTopOf="@id/textViewBrend"
+            app:layout_constraintTop_toTopOf="@id/buttonBack"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="30dp"
+
             android:background="@color/white"
 
             android:src="@drawable/ic_favorite_empty"/>
