--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,107 +100,7 @@
                     android:textSize="30dp"
                     android:textStyle="bold" />
             </FrameLayout>
-            <!---->
-            <!---->
-            <FrameLayout
-                android:id="@+id/frameShoes"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/grey"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameCostume">
 
-
-                <TextView
-                    android:id="@+id/textViewShoes"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:background="@drawable/shoes"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/shoes"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/frameJacket"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/grey"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameShoes">
-
-
-                <TextView
-                    android:id="@+id/textViewJacket"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:background="@drawable/jacket"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/jacket"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
-            <!--            -->
-            <!--            -->
-
-            <FrameLayout
-                android:id="@+id/frameTrikotaj"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/grey"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameShoes">
-
-
-                <TextView
-                    android:id="@+id/textViewTrikotaj"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:background="@drawable/trikotaj"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/trikotaj"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/frameSwimSuit"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/grey"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameTrikotaj">
-
-
-                <TextView
-                    android:id="@+id/textViewSwimSuit"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:background="@drawable/swim"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/swim_suit"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
 
 
             <!--            -->
@@ -214,7 +114,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/grey"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameTrikotaj">
+                app:layout_constraintTop_toBottomOf="@id/frameCoat">
 
 
                 <TextView
