--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,107 +52,86 @@
             android:layout_height="match_parent">
 
 
-            <FrameLayout
-                android:id="@+id/frameCostume"
-                android:layout_width="170dp"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewFirst"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:layout_marginStart="15dp"
+
                 android:layout_marginTop="10dp"
-                android:background="@color/grey"
+                android:layout_marginHorizontal="10dp"
+                app:cardCornerRadius="15dp"
+
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-
-                <TextView
-                    android:id="@+id/textViewCostume"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@drawable/gradient_horizontal"
+                    android:orientation="horizontal">
 
-                    android:background="@drawable/costume"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/costumes"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
+                    <ImageView
+                        android:id="@+id/imageViewCategory"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:src="@drawable/jesus" />
 
-            <FrameLayout
-                android:id="@+id/frameCoat"
-                android:layout_width="170dp"
+                    <TextView
+                        android:id="@+id/textViewCategory"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/category"
+                        android:layout_marginStart="2dp"
+
+                        android:textColor="@color/black"
+                        android:textSize="26dp"
+                        android:fontFamily="@font/pt_root_bold"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewSecond"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/grey"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameCostume">
 
+                android:visibility="gone"
 
-                <TextView
-                    android:id="@+id/textViewCoat"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
+                android:layout_marginHorizontal="10dp"
+                app:cardCornerRadius="15dp"
 
-                    android:background="@drawable/coat"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/coat"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
-
-
-
-            <!--            -->
-            <!--            -->
-
-            <FrameLayout
-                android:id="@+id/frameHomeWear"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/grey"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameCoat">
+                app:layout_constraintTop_toBottomOf="@id/cardViewFirst"
+                app:layout_constraintEnd_toEndOf="parent">
 
-
-                <TextView
-                    android:id="@+id/textViewHomeWear"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@drawable/gradient_horizontal"
+                    android:orientation="horizontal">
 
-                    android:background="@drawable/home"
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/home_wear"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
+                    <ImageView
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:src="@drawable/jesus" />
 
-            <FrameLayout
-                android:id="@+id/frameMarina"
-                android:layout_width="170dp"
-                android:layout_height="110dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/grey"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameHomeWear">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/category"
+                        android:layout_marginStart="2dp"
 
-
-                <TextView
-                    android:id="@+id/textViewMarina"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:gravity="center"
-                    android:paddingStart="10dp"
-                    android:text="@string/marina"
-                    android:textColor="@color/black"
-                    android:textSize="35dp"
-                    android:textStyle="bold" />
-            </FrameLayout>
+                        android:textColor="@color/black"
+                        android:textSize="26dp"
+                        android:fontFamily="@font/pt_root_bold"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/textViewNew"
@@ -166,7 +145,7 @@
                 android:textSize="36dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameHomeWear" />
+                app:layout_constraintTop_toBottomOf="@id/cardViewSecond" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewNewCollection"
