--- a/app/src/main/res/layout/item_new_clothes.xml
+++ b/app/src/main/res/layout/item_new_clothes.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="15dp"
             android:background="@color/splash"
             android:layout_marginHorizontal="5dp"
             android:layout_marginTop="5dp">
@@ -65,6 +65,7 @@
 
 
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageViewNewClothes2" />
 
         <TextView
