--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,70 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    app:cardCornerRadius="5dp"
-    android:layout_margin="10dp">
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginVertical="16dp">
+         
+      <ImageView
+          android:id="@+id/imageView"
+          android:layout_width="112dp"
+          android:layout_height="150dp"
+          android:src="@drawable/jesus"
+          android:background="@color/grey_2"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintStart_toStartOf="parent"/>
 
-        <ImageView
-            android:layout_width="140dp"
-            android:layout_height="180dp"
-            android:background="@color/black"
-            android:layout_margin="10dp"/>
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="0dp"
+          android:layout_height="0dp"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top"
-            android:orientation="vertical"
-            android:paddingTop="5dp">
+          android:layout_marginStart="16dp"
 
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/imageView"
+          app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Название - бренд"
-                android:textColor="@color/black"/>
+         <TextView
+             android:id="@+id/tvName"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Цвет: красный "
-                android:layout_margin="5dp"
-                android:textColor="@color/black"/>
+             android:text="Cady shirt dress"
+             android:fontFamily="@font/montserrat_regular"
+             android:textSize="16dp"
+             android:textColor="@color/black_2"
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Размер: L "
-                android:layout_margin="5dp"
-                android:textColor="@color/black"/>
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Количество: 1"
-                android:layout_margin="5dp"
-                android:textColor="@color/black"/>
+         <TextView
+             android:id="@+id/textView2"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Цена: 5000 Р"
-                android:layout_margin="5dp"
-                android:textColor="@color/black"/>
+             android:layout_marginTop="16dp"
+             android:fontFamily="@font/montserrat_regular"
+             android:text="Размер"
+             android:textColor="#32302F"
 
+             android:textSize="12dp"
+             app:layout_constraintTop_toBottomOf="@+id/tvName"
+             app:layout_constraintStart_toStartOf="parent"/>
 
+         <TextView
+             android:id="@+id/textView4"
+             android:layout_width="wrap_content"
 
-        </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+             android:layout_height="wrap_content"
+             android:fontFamily="@font/montserrat_regular"
+             android:text="Цвет"
+             android:textColor="#32302F"
+             android:textSize="12dp"
+             app:layout_constraintTop_toBottomOf="@+id/textView2"
+             app:layout_constraintStart_toStartOf="parent"/>
+
+         <TextView
+             android:id="@+id/textView5"
+             android:layout_width="wrap_content"
+
+             android:layout_height="wrap_content"
+             android:fontFamily="@font/montserrat_regular"
+             android:text="Бренд"
+             android:textColor="#32302F"
+             android:textSize="12dp"
+             app:layout_constraintTop_toBottomOf="@+id/textView4"
+             app:layout_constraintStart_toStartOf="parent"/>
+
+         <TextView
+             android:id="@+id/textView6"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:fontFamily="@font/montserrat_regular"
+             android:text="Категория"
+             android:textColor="#32302F"
+             android:textSize="12dp"
+             app:layout_constraintTop_toBottomOf="@+id/textView5"
+             app:layout_constraintStart_toStartOf="parent"/>
+
+         <TextView
+             android:id="@+id/tvSize"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginStart="12dp"
+
+             android:text="L (46-48)"
+             android:fontFamily="@font/montserrat_regular"
+             android:textSize="12dp"
+             android:textColor="#32302F"
+
+             app:layout_constraintStart_toEndOf="@+id/textView6"
+             app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+         <TextView
+             android:id="@+id/tvColor"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginStart="12dp"
+
+             android:text="Белый"
+             android:fontFamily="@font/montserrat_regular"
+             android:textSize="12dp"
+             android:textColor="#32302F"
+
+             app:layout_constraintStart_toEndOf="@+id/textView6"
+             app:layout_constraintTop_toBottomOf="@+id/tvSize" />
+
+         <TextView
+             android:id="@+id/tvBrend"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginStart="12dp"
+
+             android:text="Max Mara Weekend"
+             android:fontFamily="@font/montserrat_regular"
+             android:textSize="12dp"
+             android:textColor="#32302F"
+
+             app:layout_constraintStart_toEndOf="@+id/textView6"
+             app:layout_constraintTop_toBottomOf="@+id/tvColor" />
+
+         <TextView
+             android:id="@+id/tvCategory"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginStart="12dp"
+
+             android:text="Одежда"
+             android:fontFamily="@font/montserrat_regular"
+             android:textSize="12dp"
+             android:textColor="#32302F"
+
+             app:layout_constraintStart_toEndOf="@+id/textView6"
+             app:layout_constraintTop_toBottomOf="@+id/tvBrend" />
+
+         <TextView
+             android:id="@+id/tvPrice"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginTop="12dp"
+
+             android:text="208 000 ₽"
+             android:fontFamily="@font/montserrat_semibold"
+             android:textSize="16dp"
+             android:textColor="@color/black_2"
+
+             app:layout_constraintTop_toBottomOf="@+id/textView6"
+             app:layout_constraintStart_toStartOf="parent"/>
+
+         <TextView
+             android:id="@+id/tvOldPrice"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginStart="12dp"
+             android:layout_marginTop="12dp"
+
+             android:fontFamily="@font/montserrat_regular"
+             android:text="156 000 ₽"
+             android:textColor="#32302F"
+             android:textSize="14dp"
+
+             app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
+             app:layout_constraintStart_toEndOf="@+id/tvPrice"
+             app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+         <TextView
+             android:id="@+id/tvLast"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+
+             android:layout_marginTop="4dp"
+
+             android:text="Последний товар"
+             android:fontFamily="@font/montserrat_medium"
+             android:textSize="12dp"
+             android:textColor="#616575"
+             android:drawableStart="@drawable/ic_last"
+             android:drawablePadding="4dp"
+
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/tvOldPrice"/>
+      </androidx.constraintlayout.widget.ConstraintLayout>
+   </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
